<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shafulator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="x">x</string>
    <string name="slash">/</string>
    <string name="equal">=</string>
    <string name="negative">Neg</string>
    <string name="clear">C</string>

</resources>