
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/shaffles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/shaffles"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
            
            <Button
                android:id="@+id/Button0negative"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/negative"
                style="?android:attr/borderlessButtonStyle" />
           
           <Button
                android:id="@+id/Button0clear"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/clear"
                style="?android:attr/borderlessButtonStyle" />
           
           </TableRow>
           
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
                    android:layout_weight="1" >

           <Button
                android:id="@+id/Button07"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/seven"
                style="?android:attr/borderlessButtonStyle" />
           
           <Button
                android:id="@+id/Button08"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/eight"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button09"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/nine"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button0divide"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/slash"
                style="?android:attr/borderlessButtonStyle" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
           <Button
                android:id="@+id/Button04"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/four"
                style="?android:attr/borderlessButtonStyle" />
           
           <Button
                android:id="@+id/Button05"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/five"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button06"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/six"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button0multiply"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/x"
                style="?android:attr/borderlessButtonStyle" />
           
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
           <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/one"
                style="?android:attr/borderlessButtonStyle" />
           
           <Button
                android:id="@+id/Button02"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/two"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button03"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/three"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button0subtract"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/minus"
                style="?android:attr/borderlessButtonStyle" />
                
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
			<Button
                android:id="@+id/Button0."
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/dot"
                style="?android:attr/borderlessButtonStyle" />
           
           <Button
                android:id="@+id/Button00"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="num_Clicked"
    			android:text="@string/zero"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button0equal"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/equal"
                style="?android:attr/borderlessButtonStyle" />
           <Button
                android:id="@+id/Button0add"
                android:layout_width="wrap_content"
            	android:layout_weight="1" 
            	android:layout_height="fill_parent"
                android:onClick="op_Clicked"
    			android:text="@string/plus"
                style="?android:attr/borderlessButtonStyle" />
                  
        </TableRow>
    </TableLayout>

</RelativeLayout>